--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,34 +1,33 @@
 {
-  "manifest_version": 2,
-  "name": "Shifty Spritz",
-  "description": "Easy to use Spritz-type speed reader. Just select text and double tap shift!",
-  "version": "2.11",
-  "browser_action": {
-    "default_icon": "images/icon.png",
-    "default_popup": "popup.html",
-    "default_title": "Shifty Spritz"
-  },
+  "name": "Sutra",
+  "version": "1.0.0",
+  "description": "Efficiently absorb vast knowledge",
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "css": ["css/application.css"],
-      "js": ["js/jquery.js", "js/spritzify.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "browser-polyfill.js",
+        "injected-content.js"
+      ],
+      "run_at": "document_end"
     }
   ],
-  "icons": {
-    "16": "images/shifty-spritz-16.png",
-    "48": "images/shifty-spritz-48.png",
-    "128": "images/shifty-spritz-128.png"
+  "options_page": "options.html",
+  "browser_action": {
+    "default_title": "Sutra",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "128": "images/icon128.png"
+    }
   },
-  "web_accessible_resources": [
-    "index.html",
-    "fonts/DroidSans.ttf",
-    "fonts/DroidSans-Bold.ttf",
-    "fonts/fontawesome-webfont.eot",
-    "fonts/fontawesome-webfont.svg",
-    "fonts/fontawesome-webfont.ttf",
-    "fonts/fontawesome-webfont.woff",
-    "fonts/FontAwesome.otf"
-  ],
-  "permissions": ["tabs", "<all_urls>", "storage"]
+  "icons": {
+    "128": "images/icon128.png"
+  },
+  "manifest_version": 2
 }
