--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,6 +18,13 @@
       "run_at": "document_end"
     }
   ],
+  "browser_action": {
+    "default_title": "Sutra",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "128": "images/icon128.png"
+    }
+  },
   "options_page": "options.html",
   "icons": {
     "128": "images/icon128.png"
