--- a/webext/src/manifest.json
+++ b/webext/src/manifest.json
@@ -6,6 +6,12 @@
     "activeTab",
     "storage"
   ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "matches": [
