Add context menu that runs on selected text.

--- a/webext/src/manifest.json
+++ b/webext/src/manifest.json
@@ -4,7 +4,8 @@
   "description": "Efficiently absorb vast knowledge",
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "contextMenus"
   ],
   "background": {
     "scripts": [
