--- a/webext/package.json
+++ b/webext/package.json
@@ -74,6 +74,7 @@
     "core-js": "^3.2.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-loader-spinner": "^3.1.5",
     "regenerator-runtime": "^0.13.3",
     "styled-components": "^4.4.0"
   }
