Update contact email.

--- a/website/src/config.json
+++ b/website/src/config.json
@@ -7,7 +7,7 @@
   "demo_video": "https://giant.gfycat.com/HealthyPiercingBasil.mp4",
   "demo_video_cover": "https://i.imgur.com/b8jB12r.png",
   "google_analytics": "",
-  "contact_email": "sidhant+sutra@newnoetic.com",
+  "contact_email": "sutra@newnoetic.com",
   "twitter": "newnoetic",
   "company": "NewNoetic, Inc."
 }
